fix: right-align footer nav block with justify-self end, keep text left-aligned

--- a/css/style.css
+++ b/css/style.css
@@ -726,16 +726,7 @@ body.menu-open .logo-link {
     }
 
     .footer-nav {
-        text-align: right;
-    }
-
-    .footer-nav .footer-title::after {
-        left: auto;
-        right: 0;
-    }
-
-    .footer-nav .footer-list li {
-        justify-content: flex-end;
+        justify-self: end;
     }
 }
 
